--- a/re.html
+++ b/re.html
@@ -1,5 +1,5 @@
 <html>
-<title>Venkat's resume</title>
+<title>sanjeevi resume</title>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="I:/Bootstrap/bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -123,5 +123,5 @@ Present Address:-<b> C-F1,Happy homes,S.k Avenue,<br/>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="I:/Bootstrap/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
-</body>
+
 </html>
